--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
         	<version>2.0.2</version>
         </dependency>
 
+        <dependency>
+        	<groupId>kh.spotvisualizer</groupId>
+        	<artifactId>SpotVisualizerCommon</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 <profiles>
