--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>kh.mongo</groupId>
+			<artifactId>MongoSupport</artifactId>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
