--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
 			<artifactId>MongoSupport</artifactId>
 			<version>2.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>kh.radio</groupId>
+			<artifactId>hamqthclient</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 	<profiles>
