--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>kh.radio</groupId>
 			<artifactId>hamqthclient</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>2.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>asm-all-repackaged</artifactId>
